# spotify2tidal

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  config.example.yml  pyproject.toml  requirements.txt  webapp.py
.streamlit/: secrets.toml.example
spotify2tidal/: __init__.py  apple_music_client.py  apple_music_searcher.py  auth.py  cache.py  cli.py  library.py  library_csv_common.py  library_csv_spotify.py  library_csv_tidal.py  library_exporter.py  library_opml_spotify.py  logging_utils.py  matching.py  models.py  rate_limiter.py  retry_utils.py  searcher.py  spotify.py  spotify2tidal.py  spotify_client.py  spotify_searcher.py  sync.py  sync_backup.py  sync_engine.py  sync_operations.py  sync_playlists.py  tidal.py  tidal_client.py  unified_library.py
spotify2tidal/fetchers/: __init__.py  apple_music_fetcher.py  spotify_fetcher.py  tidal_fetcher.py
tests/: __init__.py  test_apple_music_searcher.py  test_auth.py  test_cache.py  test_cli.py  test_fetchers.py  test_library.py  test_logging_utils.py  test_matching.py  test_retry_utils.py  test_reverse_export.py  test_reverse_sync_playlists.py  test_robust_api.py  test_sync_operations.py  test_sync_progress_reporting.py  test_webapp_zip.py
webapp/: __init__.py  auth.py  components.py  progress.py  state.py  styles.py  sync_runner.py
